<resources>
    <string name="app_name">MybrightcovePlayer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_internet">No internet connection found.</string>
    <string name="implement_brightcove_creds">Please configure Account Id and Policy Key in Manifest.</string>

    <!--Video Quality-->
<!--    <string name="auto_description">Default video quality and data usage</string>-->
<!--    <string name="low_description">Basic video quality, less data usage</string>-->
<!--    <string name="medium_description">Standard video quality, moderate data usage</string>-->
<!--    <string name="high_description">Best video quality, high data usage</string>-->
    <string name="audio_track_selection">Audio Track Selection</string>
    <string name="caption_selection">Caption Selection</string>
    <string name="ok">Ok</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio">Audio</string>


    <string name="auto_description">ปรับความคมชัดตามความเร็วอินเทอร์เน็ต</string>
    <string name="low_description">ความคมชัดปกติ</string>
    <string name="medium_description">ความคมชัดสูง</string>
    <string name="high_description">ความคมชัดสูงสุด</string>


    <string name="auto">Auto</string>
    <string name="low">SD</string>
    <string name="medium">HD</string>
    <string name="high">Full HD</string>
    <string name="select_video_quality">Select Video Quality</string>
    <string name="cancel">Cancel</string>
    <string name="next_episode">Next Episode</string>
    <string name="previous_episode">Previous Episode</string>
    <string name="live">Live</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="video_tracks_not_available">There is no video track for this content.ี้</string>

    <string name="settings">Settings</string>
    <string name="video_quality">Video Quality</string>
    <string name="audio_tracks">Audio Tracks</string>
    <string name="unsupportes_resolution">Device is unsupported 4K resolution</string>
    <string name="none">None</string>
    <string name="lang_english">English</string>
    <string name="lang_thai">Thai</string>
    <string name="lang_chinese_simp">Chinese (Simplified)</string>
    <string name="lang_chinese_trad">Chinese (Traditional)</string>
    <string name="lang_german">German</string>
    <string name="lang_japanese">Japanese</string>

</resources>
