<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_skip_episode"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_episode_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fl_episode_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="16dp"
        tools:background="#090909"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_previous"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/previous_episode"
            android:textColor="#FFF"
            android:textSize="@dimen/skip_episode_size" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_episode_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fl_subtitle"
        app:layout_constraintStart_toEndOf="@id/fl_episode_prev"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#090909"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/next_episode"
            android:textColor="#FFF"
            android:textSize="@dimen/skip_episode_size" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fl_audio_tracks"
        app:layout_constraintStart_toEndOf="@id/fl_episode_next"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#090909"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_subtitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/subtitles"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/subtitles"
            android:textColor="#FFF"
            android:textSize="@dimen/skip_episode_size" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_audio_tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fl_subtitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#090909"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/subtitles"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/audio"
            android:textColor="#FFF"
            android:textSize="15sp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
