<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controlslayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/childControl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/player_padding"

        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:text="@string/app_name"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/settingLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:id="@+id/signIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="4dp"
                        />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:visibility="visible">

                    <androidx.mediarouter.app.MediaRouteButton
                        android:id="@+id/media_route_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:mediaRouteTypes="user"
                        app:mediaRouteButtonTint="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/playerSettingIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"


                        android:src="@drawable/player_setting_icon"
                         />

                </RelativeLayout>



            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end">

                <ImageView
                    android:id="@+id/rewind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="16dp"
                    android:src="@drawable/backward_icon"
                    android:visibility="gone" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/pause_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/pause"
                    android:padding="16dp"
                    android:visibility="visible" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start">

                <ImageView
                    android:id="@+id/forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="16dp"
                    android:src="@drawable/forward_icon"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_lay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="right">

                <LinearLayout
                    android:id="@+id/skipBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/skip_intro"
                    android:paddingStart="8dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="6dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/skipTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/videobackicon"
                        android:text="@string/skip_intro"
                        android:textColor="@color/white"
                        android:textSize="13dp"
                        android:fontFamily="@font/sukhumvittadmai_normal"/>


                </LinearLayout>


            </LinearLayout>


            <include
                android:id="@+id/seekbarLayout"
                layout="@layout/player_seekbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/playerSetting"
                layout="@layout/player_settings_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bingeLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/bingeBtn"
            android:layout_width="wrap_content"
            android:background="@drawable/next_episode"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="12dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:paddingEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/skip_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/videobackicon"
                    android:text=""
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/bingeTxt"
                    android:text="@string/next_episode"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:src="@drawable/videobackicon"
                    android:fontFamily="@font/sukhumvittadmai_normal"/>

                <ImageView
                    android:id="@+id/pause_button"
                    android:layout_marginLeft="10dp"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:layout_marginTop="1dp"
                    android:layout_gravity="center"
                    android:background="@drawable/play"
                    android:visibility="visible" />



            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="backarrow"
            android:padding="4dp"
            android:src="@drawable/videobackicon" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/replay"
            android:padding="16dp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>